# mdcheck

./: .gitignore  README.md  pyproject.toml
src/mdcheck/: __init__.py  __main__.py  anchors.py  cli.py  constants.py  discovery.py  models.py  parser.py  report.py  runner.py  validators.py
tests/: test_anchors.py  test_cli.py  test_discovery.py  test_local_validation.py  test_parser.py  test_report.py  test_runner.py  test_url_validation.py
