[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdcheck"
version = "0.1.0"
description = "Validate local and remote links in Markdown files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Andrii" }
]
dependencies = [
  "markdown-it-py>=3.0.0",
  "requests>=2.31.0"
]

[project.scripts]
mdcheck = "mdcheck.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0"
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["mdcheck"]
